--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jquery.tracking",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "This module helps to handle tracking clicks and events with google analytics.",
   "main": "dist/jquery.tracking.js",
   "repository": {
@@ -19,7 +19,8 @@
     "grunt-contrib-jasmine": "^1.1.0",
     "grunt-contrib-uglify": "^3.0.1",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-includes": "^1.0.0"
+    "grunt-includes": "^1.0.0",
+    "jasmine-jquery": "^2.1.1"
   },
   "dependencies": {
     "jquery": ">=1.8"
