--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jquery.tracking",
-  "version": "1.0.2",
-  "description": "This module helps to handle tracking clicks and events with google analytics.",
+  "version": "1.0.3",
+  "description": "This module helps to handle tracking clicks and events with google analytics, tagmanager and facebook.",
   "main": "dist/jquery.tracking.js",
   "repository": {
     "type": "git",
@@ -26,7 +26,8 @@
     "jquery": ">=1.8"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "build": "grunt"
   },
   "keywords": [
     "jquery-plugin",
@@ -34,6 +35,8 @@
     "tracking",
     "browser",
     "development",
-    "google analytics"
+    "google analytics",
+    "google tagmanager",
+    "facebook pixel",
   ]
 }
